[tool.poetry]
name = "familytracker"
version = "0.1.0"
description = "Web app to sen notifications about flights to relevant family members"
authors = ["Alexander Zuev <a.zuev@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.0"
pydantic = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
